--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file,
  and also import other style files */
-p {
-  color: blue;
-}
+
+ @import '~bootstrap';
+ @import '~font-awesome';
