--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -3,8 +3,7 @@
 
 <p (mouseover)="afficherCacher()">Bonjour {{ firstname }} {{ name }}</p>
 
-<button (click)="changeColor()"
-class="btn btn-primary">
+<button (click)="changeColor()" class="btn btn-primary">
   changer la couleur
 </button>
 
@@ -16,3 +15,5 @@ class="btn btn-primary">
 />
 
 LE contenu de l'input est {{ message }}
+
+<img src="assets/images/{{ message }}" alt="" />
