--- a/src/app/components/pere/pere.component.html
+++ b/src/app/components/pere/pere.component.html
@@ -1,3 +1,7 @@
 <p>pere works!</p>
 <app-fils [message]="messageDuPere" [name]="'cc'" [bgc]="'green'"></app-fils>
-<app-fils [bgc]="maCouleur"></app-fils>
+<app-fils
+  (messageFromFils)="recupererMessageDeMonFils($event)"
+  [bgc]="maCouleur"
+
+  ></app-fils>
