--- a/src/app/components/fils/fils.component.html
+++ b/src/app/components/fils/fils.component.html
@@ -3,3 +3,13 @@
 Le message est {{ message }}
 
 <div [style.backgroundColor]="bgc">Je suis le fils</div>
+<button (click)="envoyerInfosAuPere()" class="btn btn-success">
+  Envoyer Data à mon Pere
+</button>
+<ol>
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+  <li>4</li>
+  <li>5</li>
+</ol>
