--- a/src/app/cv/card/card.component.html
+++ b/src/app/cv/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-container" *ngIf="personne.id">
   <div class="card">
     <div class="front">
       <div class="cover">
