--- a/src/app/cv/list/list.component.html
+++ b/src/app/cv/list/list.component.html
@@ -1,14 +1,8 @@
 <ol class="list-group">
-  <li class="list-group-item">
+  <li *ngFor="let actualPersonne of personnes" class="list-group-item">
     <app-item
       (selectPersonne)="forwardPersonne($event)"
-      [personne]="personnes[0]"
-    ></app-item>
-  </li>
-  <li class="list-group-item">
-    <app-item
-      (selectPersonne)="forwardPersonne($event)"
-      [personne]="personnes[1]"
+      [personne]="actualPersonne"
     ></app-item>
   </li>
 </ol>
