--- a/src/app/cv/cv/cv.component.html
+++ b/src/app/cv/cv/cv.component.html
@@ -1,4 +1,9 @@
 <div class="row">
+  <div class="alert alert-warning">
+    {{date | date:'full'}}
+  </div>
+</div>
+<div class="row">
   <div class="col">
     <app-list (forwardSelectedPersonne)="selectPersonne($event)"></app-list>
   </div>
