detail et suppression d'une personne

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -33,7 +33,7 @@
       >
       <a
         class="nav-item nav-link"
-        [routerLink]="['color']"
+        [routerLink]="['color', 'red']"
         routerLinkActive="active text-primary"
         >Color</a
       >
