--- a/src/app/cv/detail-personne/detail-personne.component.html
+++ b/src/app/cv/detail-personne/detail-personne.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="d-flex justify-content-center" *ngIf="personne">
+<div class="d-flex justify-content-center" *ngIf="personne">
   <div class="col-lg-8 push-lg-4">
     <div class="tab-content p-b-3">
       <div class="tab-pane active" id="profile">
@@ -37,12 +37,16 @@
                 </tr>
               </tbody>
             </table>
-            <div class="d-flex justify-content-center"></div>
+            <div class="d-flex justify-content-center">
+              <button
+                (click)="deletePersonne()"
+                class="btn btn-danger">
+                Supprimer
+              </button>
+            </div>
           </div>
         </div>
-        <!--/row-->
       </div>
     </div>
   </div>
 </div>
- -->
