--- a/src/app/cv/card/card.component.html
+++ b/src/app/cv/card/card.component.html
@@ -5,7 +5,10 @@
         <img src="assets/images/rotating_card_thumb2.png" />
       </div>
       <div class="user">
-        <img class="img-circle" src="assets/images/{{ personne?.path | defaultImage }}" />
+        <img
+          class="img-circle"
+          src="assets/images/{{ personne?.path | defaultImage }}"
+        />
       </div>
       <div class="content">
         <div class="main">
@@ -50,17 +53,7 @@
         </div>
       </div>
       <div class="footer">
-        <div class="social-links text-center">
-          <a href="https://creative-tim.com" class="facebook"
-            ><i class="fa fa-facebook fa-fw"></i
-          ></a>
-          <a href="https://creative-tim.com" class="google"
-            ><i class="fa fa-google-plus fa-fw"></i
-          ></a>
-          <a href="https://creative-tim.com" class="twitter"
-            ><i class="fa fa-twitter fa-fw"></i
-          ></a>
-        </div>
+        <button (click)="goToDetails()" class="btn btn-dark">Détails</button>
       </div>
     </div>
     <!-- end back panel -->
