--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <!-- <app-router-simulator></app-router-simulator> -->
 <hr />
-
+<app-test-form></app-test-form>
 <router-outlet></router-outlet>
 
 <hr />
