--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,36 +1,46 @@
-    <form #loginForm="ngForm">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input
-          type="text"
-          name="email"
-          email
-          required
-          ngModel
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          placeholder="Enter email"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input
-          name="password"
-          ngModel
-          required
-          minlength="4"
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-          placeholder="Password"
-        />
-      </div>
-      <button
-        [disabled]="loginForm.invalid"
-        type="submit"
-        class="btn btn-primary"
-      >
-        Submit
-      </button>
-    </form>
+<form #loginForm="ngForm">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input
+      #emailInput="ngModel"
+      type="text"
+      name="email"
+      email
+      required
+      ngModel
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+      placeholder="Enter email"
+    />
+    <div
+      class="alert alert-danger"
+      *ngIf="emailInput.invalid && emailInput.touched"
+    >
+      Veuillez saisir un email valide
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input
+      name="password"
+      #passwordInput="ngModel"
+      ngModel
+      required
+      minlength="4"
+      type="password"
+      class="form-control"
+      id="exampleInputPassword1"
+      placeholder="Password"
+    />
+    <div
+      class="alert alert-danger"
+      *ngIf="passwordInput.invalid && passwordInput.touched"
+    >
+      Veuillez saisir un password d'au moins 4 caractères
+    </div>
+  </div>
+  <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary">
+    Submit
+  </button>
+</form>
