test HTtp Service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <!-- <app-router-simulator></app-router-simulator> -->
 <hr />
 <!-- <app-test-form></app-test-form> -->
+<!-- <app-observable-test></app-observable-test> -->
+<app-http-test></app-http-test>
 <router-outlet></router-outlet>
 
 <hr />
