selectionner la liste des personnes via api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <hr />
 <!-- <app-test-form></app-test-form> -->
 <!-- <app-observable-test></app-observable-test> -->
-<app-http-test></app-http-test>
+<!-- <app-http-test></app-http-test> -->
 <router-outlet></router-outlet>
 
 <hr />
