--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -40,7 +40,9 @@
       Veuillez saisir un password d'au moins 4 caractères
     </div>
   </div>
-  <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary">
+  <button [disabled]="loginForm.invalid"
+    (click)="login(loginForm)"
+    type="submit" class="btn btn-primary">
     Submit
   </button>
 </form>
