ajout et suppression et login

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,6 +26,13 @@
         >CV</a
       >
       <a
+        *ngIf="authService.isAuthenticated()"
+        class="nav-item nav-link"
+        [routerLink]="['cv', 'add']"
+        routerLinkActive="active text-primary"
+        >Ajouter Personne</a
+      >
+      <a
         class="nav-item nav-link"
         [routerLink]="['todo']"
         routerLinkActive="active text-primary"
@@ -44,10 +51,17 @@
         >Word</a
       >
       <a
+        *ngIf="!authService.isAuthenticated()"
         class="nav-item nav-link"
         [routerLink]="['login']"
         routerLinkActive="active text-primary"
         >Login</a
+      >
+      <a
+        *ngIf="authService.isAuthenticated()"
+        class="nav-item nav-link"
+        (click)="logout()"
+        >Logout</a
       >
     </div>
   </div>
